@@ -47,10 +47,10 @@ void SyGpioServer::sendGpi(int gpi,int line,bool state,bool pulse)
 	   sprintf("sending gpi: src: %d  line: %d  state: %d  pulse: %d",
 		   gpi,line,state,pulse));
 
-  char data[28]={0x03,0x00,0x02,0x07,0xC6,0x04,0x55,0x1E,
-		 0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
-		 'I','N','D','I',0x00,0x01,0x00,0x00,
-		 0x00,0x00,0x07,0x00};
+  uint8_t data[28]={0x03,0x00,0x02,0x07,0xC6,0x04,0x55,0x1E,
+		    0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
+		    'I','N','D','I',0x00,0x01,0x00,0x00,
+		    0x00,0x00,0x07,0x00};
 
   //
   // Serial Number
@@ -77,7 +77,8 @@ void SyGpioServer::sendGpi(int gpi,int line,bool state,bool pulse)
   //
   data[27]=0xFF&state;
 
-  gpio_gpi_socket->writeDatagram(data,28,QHostAddress(SWITCHYARD_GPIO_ADDRESS),
+  gpio_gpi_socket->writeDatagram((const char *)data,28,
+				 QHostAddress(SWITCHYARD_GPIO_ADDRESS),
 				 SWITCHYARD_GPIO_GPI_PORT);
 }
 
@@ -88,14 +89,14 @@ void SyGpioServer::sendGpo(int gpo,int line,bool state,bool pulse)
 	   sprintf("sending gpo: src: %d  line: %d  state: %d  pulse: %d",
 		   gpo,line,state,pulse));
 
-  char data[60]={0x03,0x00,0x02,0x07,0x36,0x0B,0x97,0xA9,
-		 0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
-		 'W','R','N','I',0x00,0x04,0x00,0x03,0xF6,
-		 0x05,0x07,0xCA,0xFF,0xFF,0xFF,0xFD,0x07,
-		 0x01,0xFF,0xFF,0xFF,0xFC,0x09,0x00,0x02,
-		 0x15,0x07,0x00,0x12,0x00,0x8F,0xFF,0xFF,
-		 0xFF,0xFF,0x09,0x00,0x02,0x15,0x07,0x00,
-		 0x00,0x00,0x8F};
+  uint8_t data[60]={0x03,0x00,0x02,0x07,0x36,0x0B,0x97,0xA9,
+		    0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
+		    'W','R','N','I',0x00,0x04,0x00,0x03,0xF6,
+		    0x05,0x07,0xCA,0xFF,0xFF,0xFF,0xFD,0x07,
+		    0x01,0xFF,0xFF,0xFF,0xFC,0x09,0x00,0x02,
+		    0x15,0x07,0x00,0x12,0x00,0x8F,0xFF,0xFF,
+		    0xFF,0xFF,0x09,0x00,0x02,0x15,0x07,0x00,
+		    0x00,0x00,0x8F};
 
   //
   // Serial Number
@@ -137,8 +138,9 @@ void SyGpioServer::sendGpo(int gpo,int line,bool state,bool pulse)
     data[27]&=~0x0A;
   }
 
-  gpio_gpo_socket->writeDatagram(data,60,QHostAddress(SWITCHYARD_GPIO_ADDRESS),
-		  SWITCHYARD_GPIO_GPO_PORT);
+  gpio_gpo_socket->writeDatagram((const char *)data,60,
+				 QHostAddress(SWITCHYARD_GPIO_ADDRESS),
+				 SWITCHYARD_GPIO_GPO_PORT);
 }
 
 
