@@ -162,3 +162,6 @@
 	* Incremented the package version to 0.7.0.
 2014-08-04 Fred Gleason <fredg@paravelsystems.com>
 	* Added a 'BuildRoot:' directive in 'switchyard.spec.in'.
+2014-08-15 Fred Gleason <fredg@paravelsystems.com>
+	* Fixed warnings in 'sy/sycmdswitch.cpp'.
+	* Fixed warnings in 'sy/sygpio_server.cpp'.
